--- a/style5.css
+++ b/style5.css
@@ -23,7 +23,7 @@ body>h1{
     margin-right: 5px
   }
   h1:hover span:nth-child(1):after{
-    content: ", а не полина.";
+    content: "не полина.";
   }
   h1:hover span:nth-child(2){
     margin-left: 30px
