--- a/style5.css
+++ b/style5.css
@@ -23,7 +23,7 @@ body>h1{
     margin-right: 5px
   }
   h1:hover span:nth-child(1):after{
-    content: "не полина";
+    content: " а не полина";
   }
   h1:hover span:nth-child(2){
     margin-left: 30px
@@ -36,6 +36,6 @@ body>h1{
   }
   span {
     position: absolute;
-    margin-bottom: 600px;
-    margin-left: 420px;
+    margin-bottom: 500px;
+    margin-left: 400px;
   }
